# telegram-torrent-downloader

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Configuration.md  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
.github/workflows/: build.yml
app/config/: __init__.py  log.py  settings.py
app/events/: download.py
app/utils/: __init__.py  cache.py  filtering.py
